tests/baselines/reference/incompatibleExports2.errors.txt
==== tests/cases/compiler/incompatibleExports2.ts (1 errors) ====
    declare module "foo" { 
        export interface x { a: string } 
        interface y { a: Date }
        export = y;
        ~~~~~~~~~~~
!!! incompatibleExports2.ts(4,5): error TS1064: Export assignment not allowed in module with exported element.
    }